name: hello-statistics
version: 0.1.0

build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs:
      src
  exposed-modules: 
      Tutorial.Statistics.Hello
  build-depends: 
      base >= 4.8 && < 5.0
    , random >= 1.1 && < 1.2
    , statistics >= 0.13 && < 0.14
  default-language: 
      Haskell2010
  ghc-options:
      -Wall
